src/test/ui/regions/regions-name-static.rs
struct Foo<'static> { //~ ERROR invalid lifetime parameter name: `'static`
    x: &'static isize
}

fn main() {}
